# prioritealist

./: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: continous_delivery.yml  continous_integration.yml  continuous_delivery.yml  publish_to_pypi.yml  pypi_publish.yml  release.yml
docs/source/: conf.py  index.rst
prioritealist/: __init__.py  main.py  task_manager.py
tests/: __init__.py  test_main.py  test_task_manager.py
